Differentiation section added, evaluation section updated

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -61,6 +61,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d3b5c4e",
+   "metadata": {},
+   "source": [
+    "# The function ```j_eval```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f567d262",
+   "metadata": {},
+   "source": [
+    "The function ```j_eval``` utilises the theory above to find the values $f(x_e), f'(x_e), f''(x_e)$, etc. for desired point(s) $x_e$, having been given interpolation nodes $x_j$. \n",
+    "\n",
+    "The inputs for ```j_eval```:\n",
+    "1. `xj` are the interpolation points/nodes ($x_j$)\n",
+    "2. `xe` the points the user wants to evaluate at - the desired points ($x_e$)\n",
+    "3. Optional argument: `diff` is the derivative the user wants to find the desired points at (0=evaluation of $f$, 1=1st derivative, 2=2nd derivative)\n",
+    "\n",
+    "\n",
+    "The output for ```j_eval```:\n",
+    "1. `Dk` is matrix such that when multiplied by $\\textbf{f}$ (the values of $f(x_j)$ in vector form), the user gets the values of $f(x_e)$ when `diff`=0; $f'(x_e)$ when `diff`=1, etc.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "196561cd",
    "metadata": {},
    "source": [
@@ -72,23 +97,59 @@
    "id": "06dc5652",
    "metadata": {},
    "source": [
-    "For given interpolation points/nodes, $x_j$, and some desired points ,$x_i$, the function ```j_eval``` uses Equation (2) to return the matrix \n",
+    "When wishing to evaluate $f(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 0. For given interpolation points/nodes, $x_j$, and some desired points, $x_e$, the function ```j_eval``` uses Equation (2) to return the matrix \n",
     "```math\n",
     "E_{ij}=\\ell_j(x_i)\n",
     "```\n",
-    "Let $\\textbf{f}$ be the vector of the nodes corresponding numbers $f_j$ $(\\textbf{f}=(f_1,f_2,...,f_{N+1}))$. Then\n",
+    "where $x_i$ is one of the points the user wishes to evaluate at, $x_e$. Let $\\textbf{f}$ be the vector of the nodes corresponding numbers $f_j$ $(\\textbf{f}=(f_1,f_2,...,f_{N+1})^T)$. Then\n",
     "```math\n",
-    "f(x_i)=E^* \\textbf{f}\n",
+    "f(x_e)=E^* \\textbf{f}\n",
     "```\n",
-    "returns the values of $f$ evaluated at the desired points $x_i$. "
+    "returns the values of $f$ evaluated at the desired points $x_e$. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c6748f8",
+   "id": "b362f5d3",
    "metadata": {},
    "source": [
-    "For ease, all the following examples in this notebook use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
+    "# Differentiating $f(x)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ab4d4c",
+   "metadata": {},
+   "source": [
+    "Given $\\ell_j$ in the form found in Equation (2) and some manipulation (Berrut et al 2004), the following can be obtained:\n",
+    "\n",
+    "```math\n",
+    "\\ell'_j(x_i)=\\begin{cases} \\ell'_j(x_i)=\\frac{w_j/w_i}{x_i-x_j}, & \\text{for $i\\neq j$}\\\\\n",
+    "\\ell'_j(x_j)=-\\sum_{i\\neq j} \\ell'(x_j), & \\text{for $i=j$}\n",
+    "\\end{cases}\n",
+    "```\n",
+    "where $x_i$ are the interpolation points (with a different index). The first-order differentiation matrix $D^{(1)}$ is defined (Berrut et al 2004) as:\n",
+    "```math\n",
+    "D_{ij}^{(1)}=\\ell_j'(x_i)\n",
+    "```\n",
+    "The function `j_eval` uses this matrix when the arugument `diff` is non-zero. When wishing to find $f'(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 1. If the user wishes to find $f''(x_e)$, the `diff` argument should be set to 2. For higher derivatives `diff` should be set at $n$ for the $n$ th-derivative.\n",
+    "\n",
+    "For differentiation, the `j_eval` functions works like this:\n",
+    "1. `j_eval` finds the matrix $E$, defined before, and then finds $D^{(1)}$, which is named $D$ in `j_eval`  \n",
+    "2. The output matrix `Dk` is then found:\n",
+    "- If `diff`=1 then `Dk`=$E^*D$\n",
+    "- If `diff`=2 then `Dk`=$E^*D^*D$\n",
+    "- If `diff`=3 then `Dk`=$E^*D^*D^*D$\n",
+    "\n",
+    "The output `Dk` is then multiplied by the vector $\\textbf{f}$, of $f_j$ values to find the derivative of $f$. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8c472d4",
+   "metadata": {},
+   "source": [
+    "The rest of this notebook goes through some examples. For ease, all the following examples in this notebook use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
     "\n",
     "```math\n",
     "x_j=\\cos \\frac{j \\pi}{n}, j=0,...,n\n",
@@ -104,14 +165,6 @@
     "\\end{cases}\n",
     "```\n",
     "While the given examples use Chebyshev points of the 2nd kind, the function ```j_eval``` can take any $x_j$ values the user provides and find their weights. Note that while the user can give any interpolation point $x_j$ into ```j_eval```, for large $N$ the user must ensure the points are clustered more heavily at the interval boundaries to ensure the interpolation is well-defined - Chebyshev points are an example of nodes that fit this criteria."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b362f5d3",
-   "metadata": {},
-   "source": [
-    "# Differentiating $f(x)$"
    ]
   },
   {
