more detail and annotations added

--- a/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
+++ b/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
@@ -45,7 +45,7 @@
    "id": "fde44163",
    "metadata": {},
    "source": [
-    "The stability function (```stab_func_DDE```) discussed in this notebook is from the stability idea put forward by D. Breda, S. Maset and R. Vermiglio (Breda, et al. 2009). Note ```stab_func_DDE```in it's current form has only been trialled on DDE systems with constant delays."
+    "The stability function (```stab_func_DDE```) discussed in this notebook is from the stability idea put forward by D. Breda, S. Maset and R. Vermiglio (Breda, et al. 2009). Note ```stab_func_DDE``` in it's current form has only been trialled on DDE systems with constant delays."
    ]
   },
   {
@@ -70,12 +70,36 @@
    "id": "6e933ebc",
    "metadata": {},
    "source": [
-    "The theory behind ```stab_func_DDE``` is explored in (Breda, et al. 2009). The main idea underpinning the source is the use of (barycdentric) interpolation and the ability to approximate the infinitesimal generator, $\\mathcal{A}$, by a matrix, called the spectral differentiation matrix, and has the components: ADD STUFF HERE!!!!!!!!!!! \n",
+    "Let there be a linearised DDE system with $n$ delays and $m$ functions. in the form:\n",
+    "```math\n",
+    "\\dot{u}=A_0u(t)+A_1u(t-\\tau_1)+...+A_nu(t-\\tau_n)\n",
+    "```\n",
+    "where $A_i$ are the $m \\times m$ partial derivatives matrices with respect to the delayed states. \n",
+    "\n",
+    "Now assume there are  $N+1$ distint interpolation points/nodes, $x_j$ for $j=1,...,N+1$, with correspodning numbers $f_j$. An interpolation polynomial, $p$, can be found such that $p(x_j)=f_j$. A common way to write $p$ is $p(x)=\\sum_{j=1}^{N+1} f_j \\ell_j(x)$, where $\\ell_j$ is the Lagrnage plynomial corresponding to the node $x_j$ (Berrut, Trefethen 2004). Berrut and Trefethen explored in (Berrut, Trefethen 2004) different ways to write this polynomial in useful ways including a key formula called the *barycentric formula* of $p$:\n",
+    "```math\n",
+    "p(x)=\\frac{\\sum_{j=1}^{N+1}\\frac{w_j}{x-x_j}f_j}{\\sum_{j=1}^{N+1} \\frac{w_j}{x-x_j}}\\tag{1},\n",
+    "```\n",
+    "where $w_j$ are the *barycentric weights*, defined as:\n",
+    "\n",
+    "```math\n",
+    "w_j=\\frac{1}{\\prod_{k\\neq j}(x_j-x_k)}, \\quad j=1,...,N+1\n",
+    "```\n",
+    "Rearranging Equation (1), gives the barycentric representation of $\\ell_j$:\n",
+    "```math\n",
+    "\\ell_j(x)=\\frac{\\frac{w_j}{(x-x_j)}}{\\sum_{k=1}^{N+1} \\frac{w_k}{x-x_k}}\\tag{2}\n",
+    "```\n",
+    "This form of $\\ell_j$ is key for the function `j_eval` that underpins much of `stab_func_DDE`. ADD MORE EXPLANATION HERE!!!! For more information on barycentric interpolation, please refer to (Berrut, Trefethen 2004).\n",
+    "\n",
+    "\n",
+    "The theory behind ```stab_func_DDE``` is explored in (Breda, et al. 2009). The main idea underpinning the source is the use of (barycentric) interpolation and the ability to approximate the infinitesimal generator, $\\mathcal{A}$, by a matrix, called the spectral differentiation matrix, that has the components: ADD STUFF HERE!!!!\n",
     "\n",
     "```math\n",
     "\\mathcal{A}_N=\\begin{pmatrix} a_1 & a_2 & ... & a_{N+1}\\\\ d_{2,1} & d_{2,2} & ... &d_{2,N+1}\\\\ . &. &. &.\\\\ . &. &... &.\\\\ . &. &. &.\\\\d_{N+1,1} & d_{N+1,2} &...& d_{N+1,N+1}\\end{pmatrix},\n",
     "```\n",
-    "where $d_{i,j}, i=2,...,N+1, j=1,...,N+1$ are the components of the matrix that ......!!!!!!"
+    "where $a_j= A_0\\ell_j(0)+A_1\\ell_j(-\\tau_1)+...+A_n \\ell_j(-\\tau_n)$ and where $d_{i,j}, i=2,...,N+1, j=1,...,N+1$ are the components of the matrix first-order differentiation matrix ADD MORE DETAIL HERE!!!.\n",
+    "\n",
+    "The function `stab_func_DDE` finds the stability by looking at the eigenvalues of $\\mathcal{A}_N$ to see if any have real parts greater than o (to indicate stability)."
    ]
   },
   {
@@ -559,10 +583,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d7f4cc4",
+   "id": "d84fec90",
    "metadata": {},
    "source": [
-    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. J-P. Berrut, L.N. Trefethen, *Barycentric Lagrange Interpolation*, SIAM Review, Vol 46, No.3, pp. 501-517, 2004\n",
+    "2. D. Breda, S. Maset and R. Vermiglio . *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
