Checked and adjusted comments/explanations

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -31,7 +31,7 @@
    "id": "895f3d64",
    "metadata": {},
    "source": [
-    "Given $N+1$ distinct nodes, $x_j$ for $j=1,...,N+1$, with numbers $f_j$ corresponding the value of $x_j$ for a given or unknown function $f$, a polynomial $p$ (of degree at most $N$) can be found such that $p$ interpolates $f$ at the points $x_j$ (i.e. $p(x_j)=f_j$) (Berrut , Trefethen 2004). This interpolation polynomial $p$ can be used to evaluate desired points for the function desired $f$.\n",
+    "Given $N+1$ distinct nodes, $x_j$ for $j=1,...,N+1$, with numbers $f_j$ corresponding the value of $x_j$ for a given (or unknown) function $f$, a polynomial $p$ (of degree at most $N$) can be found such that $p$ interpolates $f$ at the points $x_j$ (i.e. $p(x_j)=f_j$) (Berrut , Trefethen 2004). This interpolation polynomial $p$ can be used to evaluate desired points for the function $f$.\n",
     "\n",
     "The common way the solution can be written is in the *Lagrange form* (Berrut, Trefethen 2004): \n",
     "\n",
@@ -40,7 +40,7 @@
     "```\n",
     "where $\\ell_j$ is the *Lagrange polynomial* corresponding to node $x_j$.\n",
     "\n",
-    "However, as discussed in (Berrut, Trefethen 2004), in this form each evaluation of $p(x)$ requires $O(N^2)$ additions and multiplications, and adding a new node and it's correspodnding $f$ value means starting from scratch all while the computation is numerically unstable. To combat this, Berrut and Trefethen rewrote $p(x)$ into a more useful form, known as the *barycentric formula* for $p$:\n",
+    "However, as discussed in (Berrut, Trefethen 2004), in this form each evaluation of $p(x)$ requires $O(N^2)$ additions and multiplications, and adding a new node and it's corresponding $f$ value means starting from scratch, all while the computation is numerically unstable. To combat this, Berrut and Trefethen rewrote $p(x)$ into a more useful form, known as the *barycentric formula* for $p$:\n",
     "\n",
     "```math\n",
     "p(x)=\\frac{\\sum_{j=1}^{N+1}\\frac{w_j}{x-x_j}f_j}{\\sum_{j=1}^{N+1} \\frac{w_j}{x-x_j}}\\tag{1},\n",
@@ -58,7 +58,7 @@
     "\\ell_j(x)=\\frac{\\frac{w_j}{(x-x_j)}}{\\sum_{k=1}^{N+1} \\frac{w_k}{x-x_k}}\\tag{2}\n",
     "```\n",
     "\n",
-    "Given $\\ell_j$ in the form found in Equation (2) and some manipulation (Berrut et al 2004), the following can be obtained:\n",
+    "Given $\\ell_j$ in the form (2) and with some manipulation (Berrut et al 2004), the following can be obtained:\n",
     "\n",
     "```math\n",
     "\\ell'_j(x_i)=\\begin{cases} \\ell'_j(x_i)=\\frac{w_j/w_i}{x_i-x_j}, & \\text{for $i\\neq j$}\\\\\n",
@@ -89,11 +89,11 @@
     "The inputs for ```j_eval```:\n",
     "1. `xj` are the interpolation points/nodes ($x_j$)\n",
     "2. `xe` the points the user wants to evaluate at - the desired points ($x_e$)\n",
-    "3. Optional argument: `diff` is the derivative the user wants to find the desired points at (0=evaluation of $f$, 1=1st derivative, 2=2nd derivative)\n",
+    "3. Optional argument: `diff` is the derivative the user wants to find the desired points at (0=evaluation of $f$, 1=1st derivative, 2=2nd derivative); default is `0`\n",
     "\n",
     "\n",
     "The output for ```j_eval```:\n",
-    "1. `Dk` is matrix such that when multiplied by $\\textbf{f}$ (the values of $f(x_j)$ in vector form), the user gets the values of $f(x_e)$ when `diff`=0; $f'(x_e)$ when `diff`=1, etc.\n"
+    "1. `Dk` is matrix such that when multiplied by $\\textbf{f}$ (the values of $f(x_j)$,i.e. $f_j$, in vector form), the user gets the values of $f(x_e)$ when `diff`=0; $f'(x_e)$ when `diff`=1 and so on.\n"
    ]
   },
   {
@@ -114,9 +114,9 @@
     "1. `xbase` are the interpolation points/nodes\n",
     "\n",
     "The function's output:\n",
-    "1. `D1` is the 1st-order differentiation matrix for the interpolation points ($D^{(1)}_{ij}= \\ell_j'(x_i)$ for an interpolation point x_i)\n",
+    "1. `D1` is the 1st-order differentiation matrix for the interpolation points $(D^{(1)}_{ij}= \\ell_j'(x_i)$ for an interpolation point $x_i)$\n",
     "\n",
-    "The function `j_diff` is used in `j_eval` when the user wants to find an $n$ th-order derivativeof $f$ at the desired points $x_e$"
+    "The function `j_diff` is used in `j_eval` when the user wants to find an $n$ th-order derivative of $f$ at the desired points $x_e$."
    ]
   },
   {
@@ -138,9 +138,9 @@
     "```\n",
     "where $x_i$ is one of the points the user wishes to evaluate at, $x_e$. Let $\\textbf{f}$ be the vector of the nodes corresponding numbers $f_j$ $(\\textbf{f}=(f_1,f_2,...,f_{N+1})^T)$. Then\n",
     "```math\n",
-    "f(x_e)=E^* \\textbf{f}\n",
+    "f(x_e)=E^* \\textbf{f},\n",
     "```\n",
-    "returns the values of $f$ evaluated at the desired points $x_e$. "
+    "which returns the values of $f$ evaluated at the desired points $x_e$. "
    ]
   },
   {
@@ -156,7 +156,7 @@
    "id": "f9ab4d4c",
    "metadata": {},
    "source": [
-    "The function `j_eval` uses the matrix $D^{(1)}$ when the arugument `diff` is non-zero. When wishing to find $f'(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 1. If the user wishes to find $f''(x_e)$, the `diff` argument should be set to 2. For higher derivatives `diff` should be set at $n$ for the $n$ th-derivative.\n",
+    "The function `j_eval` uses the matrix $D^{(1)}$, found by `j_diff`, when the arugument `diff` is non-zero. When wishing to find $f'(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 1. If the user wishes to find $f''(x_e)$, the `diff` argument should be set to 2. For higher derivatives `diff` should be set at $n$ for the $n$ th-derivative.\n",
     "\n",
     "For differentiation, the `j_eval` functions works like this:\n",
     "1. `j_eval` finds the matrix $E$, \n",
@@ -166,7 +166,7 @@
     "- If `diff`=2 then `Dk`=$E^*D^*D$\n",
     "- If `diff`=3 then `Dk`=$E^*D^*D^*D$\n",
     "\n",
-    "The output `Dk` of `j_eval` is then multiplied by the vector $\\textbf{f}$, of $f_j$ values to find the derivative of $f$. \n"
+    "The output `Dk` of `j_eval` is then multiplied by the vector $\\textbf{f}$, of $f_j$ values, to find the derivative of $f$ at the desired points $x_e$. \n"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "The rest of this notebook goes through some examples. For ease, all the following examples in this notebook use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
     "\n",
     "```math\n",
-    "x_j=\\cos \\frac{j \\pi}{n}, j=0,...,n\n",
+    "x_j=\\cos \\frac{j \\pi}{N}, j=0,...,N\n",
     "\n",
     "```\n",
     "They have the explicit weight formula: \n",
@@ -185,7 +185,7 @@
     "w_j=(-1)^j \\delta_j,\n",
     "\\delta_j=\n",
     "\\begin{cases}\n",
-    "\\frac{1}{2}, & \\text{j=0 or j=n}\\\\\n",
+    "\\frac{1}{2}, & \\text{j=0 or j=N}\\\\\n",
     "1, & \\text{otherwise}\n",
     "\\end{cases}\n",
     "```\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -237,13 +237,13 @@
    "source": [
     "include(\"../shared/j_diff.jl\")\n",
     "include(\"../shared/j_eval.jl\")\n",
-    "N=20 #so we have 21 interpolation/Chebyshev points\n",
-    "xjvals=cos.(pi*(0:N)'/N)[:] #interpolation points in the form of chebyshev points of the 2nd kind\n",
-    "xivals=[0.5,0.75] #points you want to evaluate at (xe)\n",
-    "fvec=cos.(xjvals)[:] #fj values \n",
+    "N1=20 #so we have 21 interpolation/Chebyshev points\n",
+    "xjvals=cos.(pi*(0:N1)'/N1)[:] #interpolation points in the form of Chebyshev points of the 2nd kind\n",
+    "xivals=[0.5,0.75] #points you want to evaluate at (x_e)\n",
+    "fvec=cos.(xjvals)[:] #f_j values \n",
     "\n",
-    "emat=j_eval(xjvals,xivals) #E matrix of lj(xi) components\n",
-    "fxivals2=(emat*fvec) #gives f(xe) values "
+    "emat=j_eval(xjvals,xivals) #E matrix of l_j(x_i) components, where x_i is a point from x_e\n",
+    "fxivals2=(emat*fvec) #gives f(x_e) values "
    ]
   },
   {
@@ -274,12 +274,12 @@
    "id": "ce0ea733",
    "metadata": {},
    "source": [
-    "Next, we'll look at first-order differentiation: "
+    "We see that the answers are very similar, showing `j_eval` to be working well. Next, we'll look at first-order differentiation: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "95de1195",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
    ],
    "source": [
     "diffmat=j_eval(xjvals,xivals,diff=1) #utilises j_diff(xijvals) before outputting Dk=E*D\n",
-    "dfxivals=diffmat*fvec #gives f'(xe)=cos'([0.5,0.75])"
+    "dfxivals=diffmat*fvec #gives f'(x_e)=cos'([0.5,0.75])"
    ]
   },
   {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "ff41c224",
    "metadata": {},
    "outputs": [
@@ -351,8 +351,8 @@
    ],
    "source": [
     "#Finding f''(0.5), f''(0.75) for f(x)=cos(x)\n",
-    "D2=j_eval(xjvals,xivals,diff=2) #returns E*D*D\n",
-    "d2fvals=D2*fvec #gives f''(xe)"
+    "D2=j_eval(xjvals,xivals,diff=2) #returns E*D*D, where D is found using j_diff(xjvals)\n",
+    "d2fvals=D2*fvec #gives f''(x_e)"
    ]
   },
   {
@@ -383,12 +383,12 @@
    "id": "a12bd7c7",
    "metadata": {},
    "source": [
-    "To find higher derivatives change the value of the `diff` argument in `j_eval`."
+    "To find higher derivatives change the value of the `diff` argument in `j_eval`. The error of the output of `j_eval` and it's behaviour as $N$ increases is explored below and shown in a plot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "b5b29230",
    "metadata": {},
    "outputs": [
@@ -404,19 +404,19 @@
     }
    ],
    "source": [
-    "#Plot error for varying n\n",
+    "#Plot error for varying N\n",
     "xivals=[0.5,0.75] #points you want to evaluate at\n",
-    "ni=[1:1:150;] #a sequence of increasing n from 1 to 150\n",
+    "ni=[1:1:150;] #a sequence of increasing N from 1 to 150\n",
     "max_error=fill(NaN, length(ni))\n",
     "for k in 1:length(ni)\n",
-    "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind or n=ni[k]\n",
-    "    fvec_ni=cos.(xjvals_ni)[:]#fj values for xj values given n=ni[k]\n",
+    "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind for N=ni[k]\n",
+    "    fvec_ni=cos.(xjvals_ni)[:]#fj values for xj values given N=ni[k]\n",
     "    emat_ni=j_eval(xjvals_ni,xivals) #E matrix of lj(xi) components\n",
-    "    fxivals_ni=(emat_ni*fvec_ni)#finds estimated value of f(xi) using interpolation (polynomial)\n",
-    "    max_error[k]=findmax(abs.(fxivals_ni-true_fxi))[1] #finds maximum error between approximated f(xi) and the true f(xi)\n",
+    "    fxivals_ni=(emat_ni*fvec_ni)#finds estimated value of f(xe) using interpolation (polynomial)\n",
+    "    max_error[k]=findmax(abs.(fxivals_ni-true_fxi))[1] #finds maximum error between approximated f(xe) and the true f(xe)\n",
     "end \n",
     "fig1=Figure()\n",
-    "ax1=Axis(fig1[1,1],xlabel=\"N\",ylabel=\"error\", title=\"Error plot, f(x)=cos(x)\", yscale=log10) #Axis(fig1[1,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\")\n",
+    "ax1=Axis(fig1[1,1],xlabel=\"N\",ylabel=\"error\", title=\"Error plot, f(x)=cos(x)\", yscale=log10)\n",
     "lines!(ax1,ni,max_error)\n",
     "ylims!(ax1,[1e-16,1])\n",
     "fig1"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "ef5d8f85",
    "metadata": {},
    "outputs": [
@@ -468,16 +468,16 @@
    ],
    "source": [
     "include(\"binter_example.jl\")\n",
-    "n=200 #so we have 201 interpolation/Chebyshev points\n",
-    "xjvals=cos.(pi*(0:n)'/n)[:] \n",
-    "xivals2=[-0.99:0.02:0.99;]\n",
-    "fvec2=binter_example(xjvals) #(xivals2)\n",
+    "N2=200 #so we have 201 interpolation/Chebyshev points\n",
+    "xjvals2=cos.(pi*(0:N2)'/N2)[:] #interpolation points\n",
+    "xivals2=[-0.99:0.02:0.99;] #desired points (x_e)\n",
+    "fvec2=binter_example(xjvals2) #finds f_j values\n",
     "\n",
-    "emat2=j_eval(xjvals,xivals2) #E matrix of lj(xi) components\n",
-    "fxivals2=(emat2*fvec2)#./(emat4*vec1)\n",
+    "emat2=j_eval(xjvals2,xivals2) #E matrix of lj(xi) components\n",
+    "fxivals2=(emat2*fvec2)\n",
     "\n",
     "fig2=Figure()\n",
-    "ax2=Axis(fig2[2,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\") #Axis(fig1[1,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\")\n",
+    "ax2=Axis(fig2[2,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\")\n",
     "scatter!(ax2,xivals2,fxivals2)\n",
     "fig2"
    ]
@@ -487,12 +487,12 @@
    "id": "9444fa3d",
    "metadata": {},
    "source": [
-    "Note that this example is good to show that more commplicated functions can be explored using barycentric interpolation, however, differentiation is complicated here. The error plot below for increasing the number of interpolation points $N$ supports the complicated nature of $f(x)=|x|+0.5x-x^2$. The vastly varying errors suggests that this function is not well-defined for barycentric interpolation."
+    "Note that while this example is good to show that more commplicated functions can be explored using barycentric interpolation, differentiation is complicated here. The error plot below for increasing the number of interpolation points $N$ shows the complicated nature of $f(x)=|x|+0.5x-x^2$. The vastly varying errors suggests that this function is not well-defined for barycentric interpolation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "d85898e9",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
     "xivals=[0.5,0.75] #points you want to evaluate at\n",
     "ni=[1:1:150;] #a sequence of increasing n from 1 to 150\n",
     "max_error2=fill(NaN, length(ni))\n",
-    "true_fxi2=binter_example.(xivals)\n",
+    "true_fxi2=binter_example.(xivals) #finds true values of f(x_e)\n",
     "for k in 1:length(ni)\n",
     "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind or n=ni[k]\n",
     "    fvec_ni2=binter_example.(xjvals_ni)[:]#fj values for xj values given n=ni[k]\n",
@@ -521,7 +521,7 @@
     "end \n",
     "\n",
     "fig3=Figure()\n",
-    "ax3=Axis(fig3[1,1],xlabel=\"N\",ylabel=\"error\", title=\"Error plot, f(x)=|x|+0.5x-x²\", yscale=log10) #Axis(fig1[1,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\")\n",
+    "ax3=Axis(fig3[1,1],xlabel=\"N\",ylabel=\"error\", title=\"Error plot, f(x)=|x|+0.5x-x²\", yscale=log10)\n",
     "lines!(ax3,ni,max_error2)\n",
     "ylims!(ax3,[1e-7,1])\n",
     "fig3"
@@ -540,7 +540,7 @@
    "id": "dcf90748",
    "metadata": {},
    "source": [
-    "The stability of an equilibrium point can be found using barycentric interpolation. The function ```stab_func_DDE``` uses barycentric interpolation as a basis to find the stability, whose adjusted method is discussed in (Breda et al 2009). Below is an example for a delay differential equation system that models the interaction between two neurons. A more indepth look at this system can be found in the \"Neuron_example\" demo (in the \"Neuron_demo\" folder) but it's system is given by:\n",
+    "The stability of an equilibrium point can be found using barycentric interpolation. The function ```stab_func_DDE``` uses barycentric interpolation as a basis to find the stability, with the method discussed in (Breda et al 2009). Below is an example for a delay differential equation system that models the interaction between two neurons. A more indepth look at this system can be found in the \"Neuron_example\" demo (in the \"Neuron_demo\" folder) but it's system is given by:\n",
     "```math\n",
     "\\begin{align}\n",
     "  \\dot{x}_1&= -\\kappa x_1(t) + \\beta \\tanh(x_1(t-\\tau_s)) + a_{12} \\tanh(x_2(t-\\tau_2))\\\\\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "af703dbb",
    "metadata": {},
    "outputs": [],
@@ -601,13 +601,12 @@
     "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]); #finds the values of x1 and x2 for the equilibria\n",
     "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)];#creates a vector of vectors of all the equilibria points\n",
     "\n",
-    "\n",
-    "plist1=[u[3] for u in alist1]; #A vector of the values of a21 for the equilibria points\n"
+    "plist1=[u[3] for u in alist1]; #A vector of the values of a21 for the equilibria points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "cace5d36",
    "metadata": {},
    "outputs": [
@@ -625,14 +624,14 @@
    "source": [
     "neq=length(plist1) #number of equilibrium points we're finding the stability of\n",
     "stab=fill(NaN,neq)\n",
-    "N=50\n",
+    "N3=50 #so there are 51 interpolation points\n",
     "\n",
     "for i in 1:neq\n",
     "    A0=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
     "    A1=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ_1)\n",
     "    A2=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3) #finds partial derivative matrix with respect to x(t-τ_2)\n",
     "    A3=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4) #finds partial derivative matrix with respect to x(t-τ_s)\n",
-    "    stab[i],=stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N) #gives stability of each equilibrium point\n",
+    "    stab[i],=stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N3) #gives stability of each equilibrium point\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -641,7 +640,7 @@
     "#Below plots the equilibria and shows their stability\n",
     "fig4=Figure()\n",
     "ax4=Axis(fig4[1,1],xlabel=\"a₂₁\",ylabel=\"x\")\n",
-    "scatter!(ax4,plist1[stable],[u[1] for u in xlist1[stable]],label=\"stable\",color=\"green\")\n",
+    "scatter!(ax4,plist1[stable],[u[1] for u in xlist1[stable]],label=\"stable\",color=\"blue\")\n",
     "scatter!(ax4,plist1[unstable],[u[1] for u in xlist1[unstable]],label=\"unstable\",color=\"red\")\n",
     "Legend(fig4[1,2], ax4, merge=true)\n",
     "fig4"
@@ -652,7 +651,7 @@
    "id": "4eebb8c8",
    "metadata": {},
    "source": [
-    "Hence, with ```stab_func_DDE```'s dependence on `j_eval` and `j_diff`, barycentric interpolation can be used as part of finding stability of delay differential equations. The use of `stab_func_DDE` is explored and explained further in \"Stability_finding_for_DDEs\" (located in the \"DDE_stability_Breda_et_al\" folder)."
+    "Hence, with ```stab_func_DDE```'s dependence on `j_eval` and `j_diff`, barycentric interpolation can be used as part of the finding stability of points in delay differential equations. The use of `stab_func_DDE` is explored and explained further in \"Stability_finding_for_DDEs\" (located in the \"DDE_stability_Breda_et_al\" folder)."
    ]
   },
   {
