Added limitation section

--- a/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
+++ b/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
@@ -560,7 +560,23 @@
    "id": "b1357192",
    "metadata": {},
    "source": [
-    "It is important to try to ensure that at least half of the eigenvalaues outputted fulfill Equation (1), the number $N$ will often depend on the smoothness of the curve (a smoother curve will often require a lower $N$)."
+    "It is important to try to ensure that at least half of the eigenvalues outputted fulfill Equation (4), the number $N$ will often depend on the smoothness of the curve (a smoother curve will often require a lower $N$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac9a1e10",
+   "metadata": {},
+   "source": [
+    "# Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8621dd67",
+   "metadata": {},
+   "source": [
+    "One slight limitation of `stab_func_DDE` to note is that the function can't cope with a large $N$ and small $\\tau$ together. The interpolation nodes it finds are too similar/close to each other with some also too close to 0. This means the weights found in `j_eval` (internal function in `stab_func_DDE`) can be infinity, meaning the function breaks down. Despite this limitation, `stab_func_DDE` is good for finding stability of points with small $\\tau$ if $N$ is lowered accordingly."
    ]
   },
   {
