Corrected weights formula

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -177,15 +177,15 @@
     "The rest of this notebook goes through some examples. For ease, all the following examples in this notebook use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
     "\n",
     "```math\n",
-    "x_j=\\cos \\frac{j \\pi}{N}, j=0,...,N\n",
+    "x_j=\\cos \\frac{(j-1) \\pi}{N}, j=1,...,N+1\n",
     "\n",
     "```\n",
     "They have the explicit weight formula: \n",
     "```math\n",
-    "w_j=(-1)^j \\delta_j,\n",
-    "\\delta_j=\n",
+    "w_j=(-1)^{(j-1)} \\delta_j,\n",
+    "\\quad \\delta_j=\n",
     "\\begin{cases}\n",
-    "\\frac{1}{2}, & \\text{j=0 or j=N}\\\\\n",
+    "\\frac{1}{2}, & \\text{j=1 or j=N+1}\\\\\n",
     "1, & \\text{otherwise}\n",
     "\\end{cases}\n",
     "```\n",
